# Course 1 - getting started
add_subdirectory(1-getting-started)

# Course 2 - light
add_subdirectory(2-light)

# Course 3 - model loading
add_subdirectory(3-model-loading)

#Course 4 -advanced opengl
add_subdirectory(4-advanced-openGL)

add_subdirectory(5-tessellation)

add_subdirectory(6-skeleton)
